Ensure leaders logo will not overflow

--- a/packages/common/scss/leaders.scss
+++ b/packages/common/scss/leaders.scss
@@ -1,4 +1,7 @@
 .leaders {
+  &__logo {
+    max-width: 100%;
+  }
   &__item {
     .btn-link:hover,
     .btn-link:active,
